--- a/vote-now-poc/package.json
+++ b/vote-now-poc/package.json
@@ -12,7 +12,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^15.0.2",
-    "@govotr/vote-sdk": "file:govotr-vote-sdk-1.0.0.tgz",
+    "@govotr/vote-react-native": "file:govotr-vote-react-native-1.0.0.tgz",
     "@react-navigation/bottom-tabs": "^7.4.0",
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.8",
@@ -36,8 +36,7 @@
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "react-native-web": "~0.21.0",
-    "react-native-worklets": "0.5.1",
-    "rn-vote-sdk": "file:rn-vote-sdk-1.0.0.tgz"
+    "react-native-worklets": "0.5.1"
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
